src/main/metadata/objects/Registered_Users__c.object
<CustomObject>
    <fields>
        <fullName>department__c</fullName>
        <description>used to store the department value.</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>emailId__c</fullName>
        <description>used to store email of the requestor</description>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>first_Name__c</fullName>
        <description>used to store firstname</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_Name__c</fullName>
        <description>used to store last name</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profile__c</fullName>
        <description>used to store the profile id(just for reference not onthe pagelayout)</description>
        <label>profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <description>used to store the region of the requestor</description>
        <label>region</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>request_Status__c</fullName>
        <label>request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>userName__c</fullName>
        <description>Based on the firstname and last name this field is autopopulated.
firstname_lastname@rugcollaboration.diamler.com</description>
        <label>userName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Registered User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>userName__c</columns>
        <columns>first_Name__c</columns>
        <columns>last_Name__c</columns>
        <columns>emailId__c</columns>
        <columns>region__c</columns>
        <columns>department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Registered Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>